--- a/Project02 - QT Pet Database/src/build-PetDatabase-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile
+++ b/Project02 - QT Pet Database/src/build-PetDatabase-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile
@@ -206,6 +206,7 @@ Makefile: ../PetDatabase/PetDatabase.pro D:/QT/5.12.0/mingw73_64/mkspecs/win32-g
 		D:/QT/5.12.0/mingw73_64/mkspecs/features/qt_config.prf \
 		D:/QT/5.12.0/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		D:/QT/5.12.0/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		D:/QT/5.12.0/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		D:/QT/5.12.0/mingw73_64/mkspecs/features/toolchain.prf \
 		D:/QT/5.12.0/mingw73_64/mkspecs/features/default_pre.prf \
@@ -379,6 +380,7 @@ D:/QT/5.12.0/mingw73_64/mkspecs/features/qt_functions.prf:
 D:/QT/5.12.0/mingw73_64/mkspecs/features/qt_config.prf:
 D:/QT/5.12.0/mingw73_64/mkspecs/win32-g++/qmake.conf:
 D:/QT/5.12.0/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 D:/QT/5.12.0/mingw73_64/mkspecs/features/exclusive_builds.prf:
 D:/QT/5.12.0/mingw73_64/mkspecs/features/toolchain.prf:
 D:/QT/5.12.0/mingw73_64/mkspecs/features/default_pre.prf:
