--- a/Project02 - QT Pet Database/src/build-PetDatabase-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile.Debug
+++ b/Project02 - QT Pet Database/src/build-PetDatabase-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/Makefile.Debug
@@ -55,7 +55,8 @@ OBJECTS       = debug/main.o \
 		debug/moc_mainwindow.o \
 		debug/moc_cartwindow.o
 
-DIST          =  ..\PetDatabase\mainwindow.h \
+DIST          = Bundles.csv \
+		Technology.csv ..\PetDatabase\mainwindow.h \
 		..\PetDatabase\cartwindow.h ..\PetDatabase\main.cpp \
 		..\PetDatabase\mainwindow.cpp \
 		..\PetDatabase\cartwindow.cpp
@@ -215,6 +216,9 @@ debug/moc_mainwindow.cpp: D:/QT/5.12.0/mingw73_64/include/QtWidgets/QMainWindow 
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtouchdevice.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabwidget.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qicon.h \
+		../PetDatabase/cartwindow.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QDialog \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h \
 		../PetDatabase/mainwindow.h \
 		debug/moc_predefs.h \
 		D:/QT/5.12.0/mingw73_64/bin/moc.exe
@@ -326,6 +330,8 @@ debug/moc_cartwindow.cpp: D:/QT/5.12.0/mingw73_64/include/QtWidgets/QMainWindow 
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtouchdevice.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabwidget.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qicon.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QDialog \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h \
 		../PetDatabase/cartwindow.h \
 		debug/moc_predefs.h \
 		D:/QT/5.12.0/mingw73_64/bin/moc.exe
@@ -469,6 +475,9 @@ debug/main.o: ../PetDatabase/main.cpp ../PetDatabase/mainwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtouchdevice.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabwidget.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qicon.h \
+		../PetDatabase/cartwindow.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QDialog \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QApplication \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qapplication.h \
 		D:/QT/5.12.0/mingw73_64/include/QtCore/qcoreapplication.h \
@@ -586,6 +595,8 @@ debug/mainwindow.o: ../PetDatabase/mainwindow.cpp ../PetDatabase/mainwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabwidget.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qicon.h \
 		../PetDatabase/cartwindow.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QDialog \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h \
 		ui_mainwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtCore/QVariant \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QApplication \
@@ -634,6 +645,9 @@ debug/mainwindow.o: ../PetDatabase/mainwindow.cpp ../PetDatabase/mainwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtoolbar.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QVBoxLayout \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QWidget \
+		ui_cartwindow.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QLabel \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qlabel.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/QtGui \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/QtGuiDepends \
 		D:/QT/5.12.0/mingw73_64/include/QtCore/QtCore \
@@ -853,8 +867,7 @@ debug/mainwindow.o: ../PetDatabase/mainwindow.cpp ../PetDatabase/mainwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtexttable.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtguiversion.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QMessageBox \
-		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qmessagebox.h \
-		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qmessagebox.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o ..\PetDatabase\mainwindow.cpp
 
 debug/cartwindow.o: ../PetDatabase/cartwindow.cpp ../PetDatabase/cartwindow.h \
@@ -964,7 +977,56 @@ debug/cartwindow.o: ../PetDatabase/cartwindow.cpp ../PetDatabase/cartwindow.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qtouchdevice.h \
 		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabwidget.h \
 		D:/QT/5.12.0/mingw73_64/include/QtGui/qicon.h \
-		ui_cartwindow.h
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QDialog \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdialog.h \
+		ui_cartwindow.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/QVariant \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QApplication \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qapplication.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/qcoreapplication.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/qeventloop.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qdesktopwidget.h \
+		D:/QT/5.12.0/mingw73_64/include/QtGui/qguiapplication.h \
+		D:/QT/5.12.0/mingw73_64/include/QtGui/qinputmethod.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QHBoxLayout \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qboxlayout.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qlayout.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qlayoutitem.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qgridlayout.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QHeaderView \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qheaderview.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractitemview.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractscrollarea.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qframe.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/qabstractitemmodel.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/qitemselectionmodel.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractitemdelegate.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qstyleoption.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractspinbox.h \
+		D:/QT/5.12.0/mingw73_64/include/QtGui/qvalidator.h \
+		D:/QT/5.12.0/mingw73_64/include/QtCore/qregularexpression.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qslider.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractslider.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qstyle.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtabbar.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qrubberband.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QLabel \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qlabel.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QMenuBar \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qmenubar.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qmenu.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qaction.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qactiongroup.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QPushButton \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qpushbutton.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qabstractbutton.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QStatusBar \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qstatusbar.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QTableWidget \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtablewidget.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/qtableview.h \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QVBoxLayout \
+		D:/QT/5.12.0/mingw73_64/include/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\cartwindow.o ..\PetDatabase\cartwindow.cpp
 
 debug/moc_mainwindow.o: debug/moc_mainwindow.cpp 
